--- a/index.html
+++ b/index.html
@@ -14,50 +14,34 @@
     <section class="news">
         <article>
             <a href="#">
-                <h2 class="new">Тает снег</h2>
+                <h2 class="new">Птицы возвращаются домой</h2>
             </a>
             <div class="article-meta">
                 Опубликовал <a href="#">Виталий Бианки</a>
                 1 марта 2022
             </div>
-            <img src="ссылка">
-            <p>Краткое описание новости</p>
+            <img src="https://cdn.pixabay.com/photo/2019/03/01/21/46/key-4028762_1280.jpg">
+            <p>Прилетели стаи грачей. Весна началась. Тяжелая, темная туча, закрывавшая все небо, 
+                ушла. По синему небу поплыли кучевые облака, похожие на большие сугробы снега. 
+                Родились первые зверята. У лосей и косуль отрастают новые рога. В лесу запели чижи, синицы и корольки. 
+                Скоро прилетят скворцы и живоронки. Струйки тающего снега тайно собираются подо льдом. В лесу капель: тает 
+                снег на деревьях. По ночам морозы заново куют лед.</p>
         </article>
 
         <article>
             <a href="#">
-                <h2 class="new">Тает снег</h2>
+                <h2 class="new">В снегу родились зайчата</h2>
             </a>
             <div class="article-meta">
                 Опубликовал <a href="#">Виталий Бианки</a>
                 1 марта 2022
             </div>
-            <img src="ссылка">
-            <p>Краткое описание новости</p>
-        </article>
-
-        <article>
-            <a href="#">
-                <h2>Тает снег</h2>
-            </a>
-            <div class="article-meta">
-                Опубликовал <a href="#">Виталий Бианки</a>
-                1 марта 2022
-            </div>
-            <img src="ссылка">
-            <p>Краткое описание новости</p>
-        </article>
-
-        <article>
-            <a href="#">
-                <h2>Тает снег</h2>
-            </a>
-            <div class="article-meta">
-                Опубликовал <a href="#">Виталий Бианки</a>
-                1 марта 2022
-            </div>
-            <img src="ссылка">
-            <p>Краткое описание новости</p>
+            <img src="https://cdn.pixabay.com/photo/2022/01/22/23/09/rabbit-6959387_1280.jpg">
+            <p>В поле еще снег, а у зайчих уже родятся зайчата. Зайчата родятся зрячими, в теплых шубках. 
+                Сразу, как появятся на свет, они уже умеют бегать. Наевшись досыта материнского молока, 
+                они разбегаются и прячутся под кустами, кочками. Лежат смирнехонько, - не пищат, не балуются, 
+                хоть мать и убежала куда-то. Бегать им нельзя: ястреб заметит или нападет на след лиса.
+            </p>
         </article>
 
         <article>
@@ -68,8 +52,42 @@
                 Опубликовал <a href="#">Виталий Бианки</a>
                 1 марта 2022
             </div>
-            <img src="ссылка">
-            <p>Краткое описание новости</p>
+            <img src="https://cdn.pixabay.com/photo/2015/06/01/14/00/snowdrops-793435_1280.jpg">
+            <p>Снег тает и тает. Жителям лесных подвалов плохо приходится: кроты, землеройки,
+                мыши, полевки, лисы и другие зверьки и звери, живущие в норах под землею, уже сейчас
+                страдают от сырости. Что же будет с ними, когда весь снег превратится в воду!</p>
+        </article>
+
+        <article>
+            <a href="#">
+                <h2>Зимние гости собираются в путь</h2>
+            </a>
+            <div class="article-meta">
+                Опубликовал <a href="#">Виталий Бианки</a>
+                1 марта 2022
+            </div>
+            <img src="https://cdn.pixabay.com/photo/2016/10/31/12/06/snow-bunting-1785403_1280.jpg">
+            <p>На проезжих дорогах по всей нашей области замечены стайки маленьких
+                белых птиц, похожих на овсянок. Это наши зимние гости - снежные подорожники-
+                пуночки. Родина их в тундре, на островах и берегах Северного Ледовитого океана.
+                Там не скоро еще оттает земля.</p>
+        </article>
+
+        <article>
+            <a href="#">
+                <h2>Обвалы</h2>
+            </a>
+            <div class="article-meta">
+                Опубликовал <a href="#">Виталий Бианки</a>
+                1 марта 2022
+            </div>
+            <img src="https://cdn.pixabay.com/photo/2012/02/28/00/49/snow-17854_1280.jpg">
+            <p>В лесу начались страшные обвалы. Белка спала в своем теплом гнезде на ветке большой ели. 
+                Вдруг тяжелый ком снега обрушился с вершины дерева прямо на крышу гнезда. Белка
+                выскочила, а ее беспомощные новорожденные бельчата остались в гнезде. Белка сейчас же принялась раскапывать снег. 
+                К счастью, оказалось, что снег только придавил крышу гнезда, сделанную из толстых прутьев. Круглое внутреннее гнездо из
+                теплого мягкого моха осталось цело.
+            </p>
         </article>
     </section>
 
